--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,10 @@ a:hover {
     text-decoration:none;
 }
 
+li:hover{
+    background-color:cornsilk;
+}
+
 /*=======================================
   NAVBAR ADJUSTMENTS
 ==================================================*/
