minor changes to browsing, science fiction works now

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ a:hover {
 }
 
 li:hover{
-    background-color:cornsilk;
+    background-color:darkgrey;
 }
 
 /*=======================================
