--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,12 @@
 /*=======================================
     GENERAL STYLES
 ==================================================*/
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
           font-family:'Open Sans', sans-serif;
     font-size:14px;
